<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="st_driveControl" Id="{a432210e-a48e-47bc-bccb-e82b09aab905}">
    <Declaration><![CDATA[TYPE st_driveControl :
STRUCT
	
	xForward		: BOOL;
	xReverse		: BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>