<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="drives" Id="{dede6169-9d00-441b-82ba-083c9992ede6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM drives
VAR
	//Small Drive
	aSmallDrive					: AXIS_REF; //initilization of asmallDrive axis
	MC_Power_aSmallDrive		: MC_Power; // linking to the FB
	MC_JOG_aSmallDrive			: MC_Jog;   //linking to the FB
	
	//LargeDrive
	alargeDrive					: AXIS_REF;	
	MC_Power_aLargeDrive		: MC_Power;
	MC_JOG_aLargeDrive			: MC_Jog;
	
	Read_Actual_position		: MC_ReadActualPosition;
	ActualPositionArrayLargeDrive 		: ARRAY [1..100000] OF REAL;
	ActualPositionArraysmallDrive 		: ARRAY [1..100000] OF REAL;
	Reset_largeDrive			: MC_Reset;
	Reset_smallDrive			: MC_Reset;
	
	Index 						: INT:=1; //Index of an array
	PositionlargeDrive					: REAL;	  //positoin variable initialisation
	PositionSmallDrive			:REAL;
    TIMER						: TON;    //FB link of TON
	
	{attribute 'OPC.UA.DA' := '1'}
	testVar						: BOOL;
	
	{attribute 'OPC.UA.DA' := '1'}
	testVar1					: BOOL;
	
	{attribute 'OPC.UA.DA' := '1'}
	testVar2					: BOOL;
	
	
	
	
	//variables set for motor config 
	largevelocity				: REAL;
	smallvelocity				: REAL;
	largedeacceleration			: REAL;
	largeacceleration			: REAL;
	smallacceleration			: REAL;
	smalldeacceleration			: REAL;
	
	//variables set for complete control 
	motor1fwdscada 				:BOOL;
	motor1revscada 				:BOOL;
	
	
	
	
	
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//conditional statement for switching the RGB, Red for Emergency Stop , Green for motor 1 and Orange for motor2
IF NOT cabinet.emergencysw THEN
	Reset_largeDrive.Execute 			:= FALSE;
	Reset_smallDrive.Execute			:= FALSE;
    cabinet.redlight    				:= TRUE;
    cabinet.greenlight  				:= FALSE;
    cabinet.orangelight 				:= FALSE;
ELSIF cabinet.emergencysw AND cabinet.selector1 THEN
	Reset_smallDrive.Execute			:= TRUE;
    cabinet.redlight    				:= FALSE;
    cabinet.greenlight  				:= TRUE;
    cabinet.orangelight 				:= FALSE;   
ELSIF cabinet.emergencysw AND cabinet.selector2 THEN 
	Reset_largeDrive.Execute			:= TRUE;
    cabinet.redlight   					:= FALSE;
    cabinet.greenlight  				:= FALSE;
    cabinet.orangelight 				:= TRUE; 
END_IF

//Emergency switch to stop the motors
IF cabinet.emergencysw THEN
    drives.MC_Power_aSmallDrive.Enable := TRUE;
	drives.MC_Power_aLargeDrive.Enable := TRUE;
ELSE	
	drives.MC_Power_aSmallDrive.Enable := FALSE;
	drives.MC_Power_aLargeDrive.Enable := FALSE;
END_IF


////Selector conditonal statement
//IF cabinet.selector1 THEN
	
//	driveController.smallDrive.xForward := cabinet.motor1fwd;
//	driveController.smallDrive.xReverse := cabinet.motor1rev;
//ELSE
//	driveController.largeDrive.xForward := cabinet.motor2fwd;
//	driveController.largeDrive.xReverse := cabinet.motor2rev;	
//END_IF


WHILE cabinet.selector1 DO
	
	IF motor1fwdscada THEN
		driveController.smallDrive.xForward := TRUE;
	ELSIF motor1revscada THEN
		driveController.smallDrive.xReverse := TRUE;
		
	END_IF  
	
END_WHILE

//FB to read the positon of the large servo motor
Read_Actual_position(
	Axis								:= alargeDrive, 
	Enable								:= TRUE , 
	Valid=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> , 
	Position							 => driveController.largeDrive.actualposition);
	

//FB to read the positon of the small servo motor
Read_Actual_position(
	Axis								:= asmallDrive, 
	Enable								:= TRUE , 
	Valid=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> , 
	Position							 => driveController.smallDrive.actualposition);
	
//Fb to reset the large servo motor
Reset_largeDrive(
	Axis								:= alargeDrive, 
	Execute								:=  , 
	Done=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> );

//FB to reset the small servo motor
Reset_smallDrive(
	Axis								:=aSmallDrive , 
	Execute								:= , 
	Done=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> );
//seting up the defualt motor speed if velicty, acceleration and deacceleration is set to zero by user 

	IF driveController.largevelocity < 100 THEN
		largevelocity := 100.00;
	ELSE
		largevelocity := driveController.largevelocity;
	END_IF
	IF driveController.largeacceleration < 100 THEN
		largeacceleration:= 100.00;
	ELSE
		largeacceleration := driveController.largedeacceleration;
	END_IF
	IF driveController.largedeacceleration < 100 THEN
		largedeacceleration := 100.00;
	ELSE
		largedeacceleration := driveController.largedeacceleration;
	END_IF

	IF driveController.smallvelocity < 100 THEN
		smallvelocity := 100.00;
	ELSE
		smallvelocity := driveController.smallvelocity;
	END_IF
	IF driveController.smallacceleration < 100 THEN
		smallacceleration := 100.00;
	ELSE
		smallacceleration := driveController.smalldeacceleration;
	END_IF
	IF driveController.smalldeacceleration < 100 THEN
		smalldeacceleration := 100.00;
	ELSE
		smalldeacceleration := driveController.smalldeacceleration;
	END_IF
 
	
	////////////////////////////////////////////////


//small motor power and jog
MC_Power_aSmallDrive(
		Axis							:= aSmallDrive, 
		Enable							:= , 
		Enable_Positive					:= TRUE, 
		Enable_Negative					:= TRUE, 
		Override						:= 100, 
		BufferMode						:= , 
		Options							:= , 
		Status							=> , 
		Busy							=> , 
		Active							=> , 
		Error							=> , 
		ErrorID							=> );
	
MC_JOG_aSmallDrive(
		Axis							:= aSmallDrive, 
		JogForward						:= driveController.smallDrive.xForward, 
		JogBackwards					:= driveController.smallDrive.xReverse, 
		Mode							:= E_JogMode.MC_JOGMODE_CONTINOUS,
		Position						:= ,
		Velocity						:= smallvelocity, 
		Acceleration					:= smallacceleration, 
		Deceleration					:= smalldeacceleration, 
		Jerk							:= 15000, 
		Done							=> , 
		Busy							=> , 
		Active							=> , 
		CommandAborted					=> , 
		Error							=> , 
		ErrorID							=> );
	


//large drive Power and jog
MC_Power_aLargeDrive(
		Axis							:=alargeDrive , 
		Enable							:= , 
		Enable_Positive					:=TRUE , 
		Enable_Negative					:=TRUE , 
		Override						:=100 , 
		BufferMode						:= , 
		Options							:= , 
		Status							=> , 
		Busy							=> , 
		Active							=> , 
		Error							=> , 
		ErrorID							=> );
		
		
		
	

	MC_JOG_aLargeDrive(
		Axis							:= alargeDrive, 
		JogForward						:= driveController.largeDrive.xForward, 
		JogBackwards					:= driveController.largeDrive.xReverse, 
		Mode							:= E_JogMode.MC_JOGMODE_CONTINOUS,
		Position						:= ,
		Velocity						:= largevelocity, 
		Acceleration					:= largeacceleration,		
		Deceleration					:= largedeacceleration,
		Jerk							:= 1000, 
		Done							=> , 
		Busy							=> , 
		Active							=> , 
		CommandAborted					=> , 
		Error							=> , 
		ErrorID							=> );

		
//Timed storing of actual posiotn of  servo motor

TIMER(IN:= , PT:= T#1S , Q=> , ET=>  );		
IF driveController.largeDrive.xForward OR driveController.largeDrive.xReverse OR driveController.smallDrive.xForward OR driveController.smallDrive.xReverse THEN
	TIMER(IN := TRUE);
END_IF

IF TIMER.Q THEN
    PositionlargeDrive := driveController.largeDrive.actualposition;
	PositionSmallDrive := driveController.smallDrive.actualposition;
    ActualPositionArrayLargeDrive[Index] := PositionlargeDrive;
	ActualPositionArraysmallDrive[Index] := PositionSmallDrive;
	
    Index := Index + 1;
	Timer(IN := FALSE);
	
	
	IF Index > 100000 THEN
        Timer(IN := FALSE);  (* Stop the timer when 100000  values are stored *)
    END_IF
	
END_IF
	]]></ST>
    </Implementation>
    <LineIds Name="drives">
      <LineId Id="264" Count="0" />
      <LineId Id="281" Count="0" />
      <LineId Id="380" Count="0" />
      <LineId Id="397" Count="0" />
      <LineId Id="282" Count="3" />
      <LineId Id="398" Count="0" />
      <LineId Id="286" Count="3" />
      <LineId Id="379" Count="0" />
      <LineId Id="290" Count="3" />
      <LineId Id="218" Count="1" />
      <LineId Id="201" Count="2" />
      <LineId Id="205" Count="2" />
      <LineId Id="120" Count="0" />
      <LineId Id="260" Count="0" />
      <LineId Id="217" Count="0" />
      <LineId Id="215" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="375" Count="0" />
      <LineId Id="209" Count="4" />
      <LineId Id="204" Count="0" />
      <LineId Id="737" Count="0" />
      <LineId Id="739" Count="0" />
      <LineId Id="738" Count="0" />
      <LineId Id="742" Count="0" />
      <LineId Id="744" Count="2" />
      <LineId Id="749" Count="0" />
      <LineId Id="748" Count="0" />
      <LineId Id="743" Count="0" />
      <LineId Id="740" Count="1" />
      <LineId Id="359" Count="0" />
      <LineId Id="323" Count="0" />
      <LineId Id="334" Count="6" />
      <LineId Id="324" Count="0" />
      <LineId Id="376" Count="0" />
      <LineId Id="555" Count="8" />
      <LineId Id="365" Count="1" />
      <LineId Id="221" Count="0" />
      <LineId Id="368" Count="5" />
      <LineId Id="361" Count="2" />
      <LineId Id="389" Count="5" />
      <LineId Id="381" Count="0" />
      <LineId Id="643" Count="35" />
      <LineId Id="364" Count="0" />
      <LineId Id="360" Count="0" />
      <LineId Id="220" Count="0" />
      <LineId Id="156" Count="28" />
      <LineId Id="25" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="69" Count="11" />
      <LineId Id="55" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="564" Count="2" />
      <LineId Id="569" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="99" Count="13" />
      <LineId Id="82" Count="0" />
      <LineId Id="509" Count="0" />
      <LineId Id="453" Count="0" />
      <LineId Id="510" Count="1" />
      <LineId Id="114" Count="0" />
      <LineId Id="454" Count="0" />
      <LineId Id="460" Count="0" />
      <LineId Id="457" Count="0" />
      <LineId Id="422" Count="2" />
      <LineId Id="517" Count="0" />
      <LineId Id="425" Count="0" />
      <LineId Id="514" Count="0" />
      <LineId Id="513" Count="0" />
      <LineId Id="426" Count="0" />
      <LineId Id="468" Count="0" />
      <LineId Id="467" Count="0" />
      <LineId Id="465" Count="0" />
      <LineId Id="463" Count="1" />
      <LineId Id="452" Count="0" />
      <LineId Id="466" Count="0" />
      <LineId Id="421" Count="0" />
      <LineId Id="461" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>